--- a/Assessment-Frontend/package.json
+++ b/Assessment-Frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
