--- a/Assessment-Backend/src/main/resources/application.properties
+++ b/Assessment-Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/assessment
-spring.datasource.username=root
-spring.datasource.password=dante
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
